--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@category, @category.articles.build]) do |f| %>
+<%= form_for([@category, @article]) do |f| %>
   <p>
     <%= f.label :name %><br>
     <%= f.text_field :name %>
