--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -16,7 +16,7 @@
 <% end %>
 <% end %>
 <h2>Add a new article</h2>
-
-<%= render 'articles/form' %>
+<%= link_to 'New Article', new_category_article_path(@category) %>
+<br><br>
 
 <%= link_to 'Categories', categories_path %>
